--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 	[
 		{
 			"name": "Carlo Pietrobattista",
-			"email": "carlo@salapc.com",
+			"email": "irony00100@gmail.com",
 			"role": "Developer"
 		}
 	] ,
