--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	],
 	"homepage": "http://phptoolcase.com",
 	"license": "GPL V2",
-	"varsion": "v2.0.0-stable"
+	"version": "v2.0.0-stable" ,
 	"authors": 
 	[
 		{
