--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
 	    "easy php"
 	],
 	"homepage": "http://phptoolcase.com",
-	"license": "GPL V2",
-  "version": "v2.0.0.-stable",
+	"license": "GPL-2.0-or-later",
+	"version": "v2.0.0-stable" ,
 	"authors": 
 	[
 		{
