--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	],
 	"homepage": "http://phptoolcase.com",
 	"license": "GPL-2.0-or-later",
-  "version": "v2.0.0-stable",
+	"version": "v2.0.0-stable",
 	"authors": 
 	[
 		{
@@ -26,6 +26,6 @@
 	"require": 
 	{
 		"php": ">=5.4.0" ,
-		"ground-creative/fluidphp-core": "*"
+		"fluidphp/framework": "*"
 	}
 }
